    - debian/sssd.upstart.in: load the profile during pre-start
    - add debian/apparmor-profile, install to /etc/apparmor.d
    - debian/rules: use dh_apparmor to install profile before sssd is
      restarted
    - debian/control: sssd Suggests apparmor (>= 2.3)
    - debian/sssd.preinst: disable profile on clean install or upgrades
      from earlier than when we shipped the profile

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Wed, 04 Apr 2012 11:40:40 +0300

sssd (1.8.1-1) unstable; urgency=low

  * New maintainer, Debian SSSD Team. (Closes: #660985)

  [ Timo Aaltonen ]
  * New upstream release (1.8.1) (Closes: #647980, #624194, #639965)
    - Support for the service map in NSS
    - Support for setting default SELinux user context from FreeIPA
    - Support for retrieving SSH user and host keys from LDAP (Experimental)
    - Support for caching autofs LDAP requests (Experimental)
    - Support for caching SUDO rules (Experimental)
  * Update build-deps:
    - Add libunistring-dev, libdhash-dev, libcollection-dev and
      libini-config-dev.
    - Add check for unit tests.
    - Drop cvs and python-central.
    - Migrate to dh, drop cdbs build-dep, add quilt, dh-autoreconf and
      autopoint to build-deps.
  * Add new packages:
    - libipa-hbac0, libipa-hbac-dev, libsss-sudo0, libsss-sudo-dev,
      and python-libipa-hbac.
    - Split sssd-tools: add Breaks/Replaces sssd (<< 1.8.0~beta3-1) and
      add to sssd Suggests
  * Drop patch to ensure LDAP authentication never accept a zero
    length password, which is now included upstream.
  * sssd.upstart.ubuntu:
    - Don't start before net-device-up. (LP: 812943)
    - Source /etc/default/sssd. (LP: 812943)
  * sssd.default: Added a file to include the sssd daemon defaults,
    currently has '-D -f'.
  * sssd.init: Drop separate OPTIONS, '-D' comes from /etc/default/sssd
    now..
  * rules: Install the Python API files to /usr/share/sssd, as discussed
    with upstream. (LP: 859611)